--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 tokio = { version = "1.3.0", features = ["full"] }
 hyper = { version = "0.14.4", features = ["full"] }
 serde = { version = "1.0.124", features = ["derive"] }
+image = "0.23.14"
 serde_json = "1.0.64"
 base64 = "0.13.0"
 http = "0.2.3"
