--- a/front/package.json
+++ b/front/package.json
@@ -5,12 +5,16 @@
   "main": "dist/index.html",
   "scripts": {
     "start": "NODE_ENV=development parcel serve ./src/index.html",
-    "build": "NODE_ENV=production parcel build ./src/index.html --no-source-maps"
+    "build": "NODE_ENV=production parcel build ./src/index.html --no-source-maps",
+    "lint": "ts-standard",
+    "lint:fix": "ts-standard --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1"
+    "parcel": "^2.0.0-beta.1",
+    "ts-standard": "^10.0.0",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
