--- a/.editorconfig
+++ b/.editorconfig
@@ -6,5 +6,8 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
-[*.{svg,js,ts,tsx}]
+[*.{svg,js,json,ts,tsx}]
+indent_size = 2
+
+[.babelrc]
 indent_size = 2
