--- a/front/package.json
+++ b/front/package.json
@@ -9,15 +9,23 @@
     "lint": "ts-standard",
     "lint:fix": "ts-standard --fix"
   },
+  "alias": {
+    "react": "preact/compat",
+    "react-dom": "preact/compat"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/plugin-transform-typescript": "^7.13.0",
+    "@types/react-router-dom": "^5.1.7",
+    "parcel": "^2.0.0-beta.2",
     "ts-standard": "^10.0.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
-    "preact": "^10.5.12"
+    "preact": "^10.5.12",
+    "react-router-dom": "^5.2.0"
   }
 }
