--- a/front/package.json
+++ b/front/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=development parcel serve ./src/index.html",
     "build": "NODE_ENV=production parcel build ./src/index.html --no-source-maps",
-    "lint": "ts-standard",
-    "lint:fix": "ts-standard --fix"
+    "lint": "ts-standard ./src",
+    "lint:fix": "ts-standard --fix ./src"
   },
   "alias": {
     "react": "preact/compat",
